@@ -1059,31 +1059,32 @@ static GdkPixmap *is_smiley(GtkWidget *window, char *m, int *len) {
 void write_html_with_smileys(GtkWidget *window, GtkWidget *html, char *what)
 {
 	int y = 0;
-	char buf2[BUF_LONG];
+	char *buf2 = g_strdup(what);
 	int i;
 	GdkPixmap *face;
 
-			for (i = 0; i < strlen(what); i++)
-        		{
-				int len;
-				if ((face = is_smiley(window, &what[i], &len)) != NULL) {
-					buf2[y] = 0;
-					gtk_html_append_text(GTK_HTML(html), buf2, (display_options & OPT_DISP_IGNORE_COLOUR) ? HTML_OPTION_NO_COLOURS : 0);
-					gtk_html_add_pixmap(GTK_HTML(html), face, 0, 0);
-					y = 0;
-					i += len - 1;
-				} else {
-	               			buf2[y] = what[i];
-	               			y++;
+	for (i = 0; i < strlen(what); i++)
+	{
+		int len;
+		if ((face = is_smiley(window, &what[i], &len)) != NULL) {
+			buf2[y] = 0;
+			gtk_html_append_text(GTK_HTML(html), buf2, (display_options & OPT_DISP_IGNORE_COLOUR) ? HTML_OPTION_NO_COLOURS : 0);
+			gtk_html_add_pixmap(GTK_HTML(html), face, 0, 0);
+			y = 0;
+			i += len - 1;
+		} else {
+			buf2[y] = what[i];
+			y++;
 
-				}
-        		}
+		}
+	}
 
-			if (y)
-			{
-				buf2[y] = 0;
-				gtk_html_append_text(GTK_HTML(html), buf2, (display_options & OPT_DISP_IGNORE_COLOUR) ? HTML_OPTION_NO_COLOURS : 0);
-			}				
+	if (y)
+	{
+		buf2[y] = 0;
+		gtk_html_append_text(GTK_HTML(html), buf2, (display_options & OPT_DISP_IGNORE_COLOUR) ? HTML_OPTION_NO_COLOURS : 0);
+	}
+	g_free(buf2);
 }
 
 /* this is going to be interesting since the conversation could either be a
