@@ -728,64 +728,64 @@ void plugin_event(enum gaim_event event, void *arg1, void *arg2, void *arg3) {
 			buf[0] = 0;
 			break;
 		case event_im_recv:
-			sprintf(buf, "\"%s\" %s", *(char **)arg1, *(char **)arg2);
+			g_snprintf(buf, sizeof buf, "\"%s\" %s", *(char **)arg1, *(char **)arg2);
 			break;
 		case event_im_send:
-			sprintf(buf, "\"%s\" %s", (char *)arg1, *(char **)arg2);
+			g_snprintf(buf, sizeof buf, "\"%s\" %s", (char *)arg1, *(char **)arg2);
 			break;
 		case event_buddy_signon:
-			sprintf(buf, "\"%s\"", (char *)arg1);
+			g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg1);
 			break;
 		case event_buddy_signoff:
-			sprintf(buf, "\"%s\"", (char *)arg1);
+			g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg1);
 			break;
 		case event_buddy_away:
-			sprintf(buf, "\"%s\"", (char *)arg1);
+			g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg1);
 			break;
 		case event_buddy_back:
-			sprintf(buf, "\"%s\"", (char *)arg1);
+			g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg1);
 			break;
 		case event_blist_update:
 			buf[0] = 0;
 			break;
 		case event_chat_invited:
-			sprintf(buf, "\"%s\" \"%s\" %s", (char *)arg1, (char *)arg2, (char *)arg3);
+			g_snprintf(buf, sizeof buf, "\"%s\" \"%s\" %s", (char *)arg1, (char *)arg2, (char *)arg3);
 			break;
 		case event_chat_join:
-			sprintf(buf, "\"%s\"", (char *)arg1);
+			g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg1);
 			break;
 		case event_chat_leave:
-			sprintf(buf, "\"%s\"", (char *)arg1);
+			g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg1);
 			break;
 		case event_chat_buddy_join:
-			sprintf(buf, "\"%s\" \"%s\"", (char *)arg1, (char *)arg2);
+			g_snprintf(buf, sizeof buf, "\"%s\" \"%s\"", (char *)arg1, (char *)arg2);
 			break;
 		case event_chat_buddy_leave:
-			sprintf(buf, "\"%s\" \"%s\"", (char *)arg1, (char *)arg2);
+			g_snprintf(buf, sizeof buf, "\"%s\" \"%s\"", (char *)arg1, (char *)arg2);
 			break;
 		case event_chat_recv:
-			sprintf(buf, "\"%s\" \"%s\" %s", (char *)arg1, (char *)arg2, (char *)arg3);
+			g_snprintf(buf, sizeof buf, "\"%s\" \"%s\" %s", (char *)arg1, (char *)arg2, (char *)arg3);
 			break;
 		case event_chat_send:
-			sprintf(buf, "\"%s\" %s", (char *)arg1, *(char **)arg2);
+			g_snprintf(buf, sizeof buf, "\"%s\" %s", (char *)arg1, *(char **)arg2);
 			break;
 		case event_warned:
-			sprintf(buf, "\"%s\" %d", (char *)arg1, (int)arg2);
+			g_snprintf(buf, sizeof buf, "\"%s\" %d", (char *)arg1, (int)arg2);
 			break;
 		case event_error:
-			sprintf(buf, "%d", (int)arg1);
+			g_snprintf(buf, sizeof buf, "%d", (int)arg1);
 			break;
 		case event_quit:
 			buf[0] = 0;
 			break;
 		case event_new_conversation:
-			sprintf(buf, "\"%s\"", (char *)arg1);
+			g_snprintf(buf, sizeof buf, "\"%s\"", (char *)arg1);
 			break;
 		default:
 			break;
 	}
 	tmp = event_name(event);
-	sprintf(debug_buff, "%s: %s\n", tmp, buf);
+	g_snprintf(debug_buff, sizeof debug_buff, "%s: %s\n", tmp, buf);
 	debug_print(debug_buff);
 	perl_event(tmp, buf);
 #endif
